--- a/helloworld.Rmd
+++ b/helloworld.Rmd
@@ -1,8 +1,1 @@
----
-title: "helloworld"
-author: "Michael"
-date: "3/26/2020"
-output: html_document
----
-
-## This is a markdown file
+This is a markdown file
